<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.GifDetails"
        android:background="@color/background_grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.GifDetails">

            <ImageView
                android:id="@+id/gif_image_view"
                android:contentDescription="@string/gif_original_description"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="32dp"
                android:text="@string/title_placeholder"
                android:textSize="30sp"
                android:textColor="@color/text_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gif_image_view" />

            <TextView
                android:id="@+id/user_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/username_placeholder"
                android:textColor="@color/text_main"
                app:layout_constraintEnd_toEndOf="@+id/title_text_view"
                app:layout_constraintStart_toStartOf="@+id/title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

            <TextView
                android:id="@+id/import_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/date_placeholder"
                android:textColor="@color/text_main"
                app:layout_constraintEnd_toEndOf="@+id/user_text_view"
                app:layout_constraintStart_toStartOf="@+id/user_text_view"
                app:layout_constraintTop_toBottomOf="@+id/user_text_view" />

            <TextView
                android:id="@+id/frames_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/frames_placeholder"
                android:textColor="@color/text_main"
                app:layout_constraintEnd_toEndOf="@+id/import_date_text_view"
                app:layout_constraintStart_toStartOf="@+id/import_date_text_view"
                app:layout_constraintTop_toBottomOf="@+id/import_date_text_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>